--- a/specs/external-app/applist.yaml
+++ b/specs/external-app/applist.yaml
@@ -298,6 +298,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UninstallReleaseResponse"
+  /orchestrator/application/update:
+    put:
+      description: update the application
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateReleaseRequest'
+      responses:
+        "200":
+          description: application update success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/UpdateReleaseResponse"
 components:
   schemas:
     appListRequest:
@@ -641,6 +659,24 @@ components:
           description: desired manifest
           example: "some manifest"
     UninstallReleaseResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+          description: success or failure
+          example: true
+    UpdateReleaseRequest:
+      type: object
+      properties:
+        appId:
+          type: string
+          description: helm app id
+          example: "1|test|testapp"
+        valuesYaml:
+          type: string
+          description: updated values yaml string
+          example: ""
+    UpdateReleaseResponse:
       type: object
       properties:
         success:
