--- a/scripts/argo-assets/model.conf
+++ b/scripts/argo-assets/model.conf
@@ -11,4 +11,4 @@ g = _, _
 e = some(where (p.eft == allow)) && !some(where (p.eft == deny))
 
 [matchers]
-m = g(r.sub, p.sub) && matchKey(r.res, p.res) && matchKey(r.act, p.act) && matchKey(r.obj, p.obj)
+m = g(r.sub, p.sub) && matchKeyByPart(r.res, p.res) && matchKeyByPart(r.act, p.act) && matchKeyByPart(r.obj, p.obj)
