Renamed symbiote to kubelink

--- a/manifests/yamls/devtron.yaml
+++ b/manifests/yamls/devtron.yaml
@@ -88,7 +88,7 @@ data:
   GRAFANA_HOST: "devtron-grafana.devtroncd"
   GRAFANA_PORT: "80"
   GRAFANA_NAMESPACE: "devtroncd"
-  HELM_CLIENT_URL: symbiote-service.devtroncd:50051
+  HELM_CLIENT_URL: kubelink-service.devtroncd:50051
 
 ---
 apiVersion: v1
