--- a/specs/external-app/applist.yaml
+++ b/specs/external-app/applist.yaml
@@ -53,11 +53,11 @@ paths:
             type: string
       responses:
         "200":
-          description: release info
+          description: release and installed app info
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ReleaseInfo"
+                $ref: "#/components/schemas/ReleaseAndInstalledAppInfo"
   /orchestrator/application/hibernate:
     post:
       description: hibernate the app
@@ -624,6 +624,29 @@ components:
       description: deployment history
       items:
         $ref: "#/components/schemas/HelmAppDeploymentDetail"
+    InstalledAppInfo:
+      type: object
+      properties:
+        appId:
+          type: integer
+          description: appId
+        environmentName:
+          type: string
+          description: environment Name
+        appOfferingMode:
+          type: string
+          description: EA_ONLY/FULL
+    ReleaseAndInstalledAppInfo:
+      type: object
+      properties:
+        releaseInfo:
+          type: object
+          $ref: "#/components/schemas/ReleaseInfo"
+          description: release info
+        installedAppInfo:
+          type: object
+            $ref: "#/components/schemas/InstalledAppInfo"
+            description: Installed app info
     ReleaseInfo:
       type: object
       properties:
