app info in app detail

--- a/specs/external-app/applist.yaml
+++ b/specs/external-app/applist.yaml
@@ -639,6 +639,9 @@ components:
         appOfferingMode:
           type: string
           description: EA_ONLY/FULL
+        appStoreChartId:
+          type: number
+          description: App store chart Id
     ReleaseAndInstalledAppInfo:
       type: object
       properties:
