--- a/specs/historical-definitions.yaml
+++ b/specs/historical-definitions.yaml
@@ -3,11 +3,16 @@ info:
   version: 1.0.0
   title: Historical Task definitions
 paths:
-  /orchestrator/history/cm-cs/{pipelineId}:
+  /orchestrator/app/history/cm/{appId}/{pipelineId}:
     get:
-      description: fetch history for deployed cm and cs
-      operationId: FetchDeployedCMCSHistory
+      description: fetch history for deployed config maps
+      operationId: FetchDeployedCMHistory
       parameters:
+        - name: appId
+          in: path
+          required: true
+          schema:
+            type: integer
         - name: pipelineId
           in: path
           required: true
@@ -41,11 +46,16 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /orchestrator/history/charts/{pipelineId}:
+  /orchestrator/app/history/cs/{appId}/{pipelineId}:
     get:
-      description: fetch history for deployed charts(deployment template)
-      operationId: FetchDeployedChartsHistory
+      description: fetch history for deployed secrets
+      operationId: FetchDeployedCSHistory
       parameters:
+        - name: appId
+          in: path
+          required: true
+          schema:
+            type: integer
         - name: pipelineId
           in: path
           required: true
@@ -59,7 +69,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ChartsHistoryDto'
+                  $ref: '#/components/schemas/ConfigMapAndSecretHistoryDto'
         '400':
           description: Bad Request. Input Validation error/wrong request body.
           content:
@@ -79,11 +89,59 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /orchestrator/history/strategy/{pipelineId}:
+  /orchestrator/app/history/template/{appId}/{pipelineId}:
+    get:
+      description: fetch history for deployed deployment templates
+      operationId: FetchDeployedTemplatesHistory
+      parameters:
+        - name: appId
+          in: path
+          required: true
+          schema:
+            type: integer
+        - name: pipelineId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successfully return history
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DeploymentTemplateHistoryDto'
+        '400':
+          description: Bad Request. Input Validation error/wrong request body.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Unauthorized User
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /orchestrator/app/history/strategy/{appId}/{pipelineId}:
     get:
       description: fetch history for deployed pipeline stratedy
       operationId: FetchDeployedStrategyHistory
       parameters:
+        - name: appId
+          in: path
+          required: true
+          schema:
+            type: integer
         - name: pipelineId
           in: path
           required: true
@@ -117,16 +175,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /orchestrator/history/cd-config/{pipelineId}:
+  /orchestrator/app/history/cd-config/{appId}/{pipelineId}:
     get:
       description: fetch history for cd config (pre/post stage config)
       operationId: FetchDeployedCdConfigHistory
       parameters:
+        - name: appId
+          in: path
+          required: true
+          schema:
+            type: integer
         - name: pipelineId
           in: path
           required: true
           schema:
             type: integer
+        - name: stage
+          in: query
+          required: true
+          schema:
+            type: string
+            enum:
+              - "PRE_CD"
+              - "POST_CD"
       responses:
         '200':
           description: Successfully return history
@@ -135,7 +206,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/CdConfigHistoryDto'
+                  $ref: '#/components/schemas/PrePostCdScriptHistoryDto'
         '400':
           description: Bad Request. Input Validation error/wrong request body.
           content:
@@ -176,7 +247,7 @@ components:
         deployedBy:
           type: integer
 
-    ChartsHistoryDto:
+    DeploymentTemplateHistoryDto:
       type: object
       properties:
         id:
@@ -187,6 +258,12 @@ components:
           type: string
         template:
           type: string
+        templateName:
+          type: string
+        templateVersion:
+          type: string
+        isAppMetricsEnabled:
+          type: boolean
         targetEnvironment:
           type: integer
         deployed:
@@ -218,14 +295,14 @@ components:
         deployedBy:
           type: integer
 
-    CdConfigHistoryDto:
+    PrePostCdScriptHistoryDto:
       type: object
       properties:
         id:
           type: integer
         pipelineId:
           type: integer
-        config:
+        script:
           type: string
         stage:
           type: string
@@ -235,6 +312,8 @@ components:
           $ref: '#/components/schemas/ConfigData'
         secretData:
           $ref: '#/components/schemas/ConfigData'
+        triggerType:
+          type: string
         execInEnv:
           type: boolean
         deployed:
