made reusable jobs-cronjobs

--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/Cronjob.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/Cronjob.yaml
@@ -32,7 +32,7 @@ apiVersion: batch/v1
 {{- end }}
 kind: CronJob
 metadata:
-  name: {{ include ".Chart.Name .fullname" $ }}
+  name: {{ include ".Chart.Name .fullname" $ }}-{{ .Release.Revision }}
   labels:
     app: {{ template ".Chart.Name .name" $ }}
     chart: {{ template ".Chart.Name .chart" $ }}
