--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/Cronjob.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/Cronjob.yaml
@@ -25,14 +25,10 @@
   {{- end }}
 
 {{ if eq .Values.kind "CronJob" }}
-{{ if semverCompare "<=1.20" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: batch/v1
-{{- else -}}
-apiVersion: batch/v1
-{{- end }}
 kind: CronJob
 metadata:
-  name: {{ include ".Chart.Name .fullname" $ }}-{{ .Release.Revision }}
+  name: {{ include ".Chart.Name .fullname" $ }}
   labels:
     app: {{ template ".Chart.Name .name" $ }}
     chart: {{ template ".Chart.Name .chart" $ }}
