--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/job.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/job.yaml
@@ -88,6 +88,10 @@ spec:
         - name: {{ . }}
   {{- end }}
 {{- end}}
+{{- if $.Values.podSecurityContext }}
+      securityContext:
+{{ toYaml .Values.podSecurityContext | indent 8 }}
+{{- end }}
 {{- if $.Values.initContainers}}
       initContainers:
 {{- range $i, $c := .Values.initContainers }}
@@ -144,6 +148,15 @@ spec:
           securityContext:
             privileged: true
 {{- end}}
+{{- if $.Values.containerSecurityContext }}
+          securityContext:
+{{ toYaml .Values.containerSecurityContext | indent 12 }}
+{{- end }}
+{{- if and $.Values.containerSecurityContext $.Values.privileged }}
+          securityContext:
+            privileged: true
+{{ toYaml .Values.containerSecurityContext | indent 12 }}
+{{- end }}
           ports:
           {{- range $.Values.ContainerPort }}
             - name: {{ .name}}
