--- a/manifests/yamls/devtron.yaml
+++ b/manifests/yamls/devtron.yaml
@@ -57,7 +57,7 @@ data:
   CD_NODE_TAINTS_VALUE: "ci"
   CD_ARTIFACT_LOCATION_FORMAT: "%d/%d.zip"
   DEFAULT_CD_NAMESPACE: "devtron-cd"
-  DEFAULT_CI_IMAGE: "quay.io/devtron/ci-runner:a60f4ab4-138-6833"
+  DEFAULT_CI_IMAGE: "quay.io/devtron/ci-runner:f948c43c-138-7243"
   DEFAULT_CD_TIMEOUT: "3600"
   WF_CONTROLLER_INSTANCE_ID: "devtron-runner"
   CI_LOGS_KEY_PREFIX: "ci-artifacts"
@@ -89,6 +89,7 @@ data:
   GRAFANA_PORT: "80"
   GRAFANA_NAMESPACE: "devtroncd"
   HELM_CLIENT_URL: kubelink-service.devtroncd:50051
+  GITOPS_REPO_PREFIX: "devtron"
 
 ---
 apiVersion: v1
