--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/app-values.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/app-values.yaml
@@ -133,3 +133,11 @@ servicemonitor:
 imagePullSecrets: []
   # - test1
   # - test2
+
+containerSecurityContext:
+  allowPrivilegeEscalation: false
+
+podSecurityContext: {}
+  # runAsUser: 1000
+  # runAsGroup: 3000
+  # fsGroup: 2000 
