--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-3-0/templates/cronjob.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-3-0/templates/cronjob.yaml
@@ -83,6 +83,10 @@ spec:
           tolerations:
     {{- toYaml .Values.tolerations | nindent 12 }}
       {{- end }}
+    {{- if $.Values.podSecurityContext }}
+          securityContext:
+    {{- toYaml .Values.podSecurityContext | nindent 12 }}
+    {{- end }}      
     {{- if $.Values.imagePullSecrets}}
           imagePullSecrets:
       {{- range .Values.imagePullSecrets }}
@@ -125,6 +129,15 @@ spec:
               securityContext:
                 privileged: true
     {{- end}}
+    {{- if $.Values.containerSecurityContext }}
+              securityContext:
+    {{- toYaml .Values.containerSecurityContext | nindent 16 }}
+    {{- end }}
+    {{- if and $.Values.containerSecurityContext $.Values.privileged }}
+              securityContext:
+                privileged: true
+    {{- toYaml .Values.containerSecurityContext | nindent 16 }}
+    {{- end }}    
               ports:
               {{- range $.Values.ContainerPort }}
                 - name: {{ .name}}
