--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-3-0/templates/job.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-3-0/templates/job.yaml
@@ -82,6 +82,10 @@ spec:
       tolerations:
 {{ toYaml .Values.tolerations | indent 8 }}
   {{- end }}
+{{- if $.Values.podSecurityContext }}
+      securityContext:
+{{ toYaml .Values.podSecurityContext | indent 8 }}
+{{- end }}  
 {{- if $.Values.imagePullSecrets}}
       imagePullSecrets:
   {{- range .Values.imagePullSecrets }}
@@ -124,6 +128,15 @@ spec:
           securityContext:
             privileged: true
 {{- end}}
+{{- if $.Values.containerSecurityContext }}
+          securityContext:
+{{ toYaml .Values.containerSecurityContext | indent 12 }}
+{{- end }}
+{{- if and $.Values.containerSecurityContext $.Values.privileged }}
+          securityContext:
+            privileged: true
+{{ toYaml .Values.containerSecurityContext | indent 12 }}
+{{- end }}
           ports:
           {{- range $.Values.ContainerPort }}
             - name: {{ .name}}
