--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-3-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-3-0/test_values.yaml
@@ -327,3 +327,12 @@ podAnnotations:
 
 podLabels:
   severity: critical
+
+containerSecurityContext:
+  allowPrivilegeEscalation: false
+
+
+podSecurityContext: 
+  runAsUser: 1000
+  runAsGroup: 3000
+  fsGroup: 2000 
