--- a/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/templates/secret.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/templates/secret.yaml
@@ -50,6 +50,7 @@ spec:
     property: {{.property}}
     {{- end}}
     isBinary: {{.isBinary}}
+    region: {{.region}}
   {{- end}}
   {{- end}}
   {{- end}}
