Expose shareProcessNamespace in a Job/CronJob

--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/job.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/job.yaml
@@ -64,6 +64,9 @@ spec:
       terminationGracePeriodSeconds: {{ $.Values.GracePeriod }}
       restartPolicy: OnFailure
 {{- if and $.Values.Spec.Affinity.Key $.Values.Spec.Affinity.Values }}
+{{- if $.Values.shareProcessNamespace }}
+      shareProcessNamespace: {{ $.Values.shareProcessNamespace }}
+{{- end }}
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
