--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/Cronjob.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/Cronjob.yaml
@@ -69,6 +69,9 @@ spec:
           terminationGracePeriodSeconds: {{ $.Values.GracePeriod }}
           restartPolicy: {{ $.Values.cronjobConfigs.restartPolicy }}
     {{- if and $.Values.Spec.Affinity.Key $.Values.Spec.Affinity.Values }}
+    {{- if $.Values.shareProcessNamespace }}
+          shareProcessNamespace: {{ $.Values.shareProcessNamespace }}
+    {{- end }}
           affinity:
             nodeAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
