update workflow.yaml spec

--- a/scripts/devtron-reference-helm-charts/workflow-chart_1-0-0/templates/workflow.yaml
+++ b/scripts/devtron-reference-helm-charts/workflow-chart_1-0-0/templates/workflow.yaml
@@ -9,7 +9,10 @@ metadata:
     releaseVersion: {{ $.Values.releaseVersion | quote }}
     pipelineName: {{ .Values.pipelineName }}
 spec:
-  arguments: {}
+  {{- if $.Values.arguments}}
+  arguments:
+{{ toYaml $.Values.arguments | indent 4 -}}
+  {{- end }}
   {{- if $.Values.imagePullSecrets}}
   imagePullSecrets:
     {{- range .Values.imagePullSecrets }}
